# boenergo_test_task

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
app/: main.py  schemas.py  tests.py  utils.py
