[tool.poetry]
name = "boenergo-test-task"
version = "0.1.0"
description = ""
authors = ["Stas Cartoon <bycs@mail.ru>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.1"
SQLAlchemy = "2.0.9"
alembic = "1.10.3"
uvicorn = {extras = ["standard"], version = "0.21.1"}
psycopg = {extras = ["binary"], version = "3.1.8"}
# Other
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
# Formatters
black = "23.3.0"
isort = "5.12.0"
# Linters
flake8 = "5.0.4"
flake8-black = "0.3.6"
flake8-builtins = "2.1.0"
flake8-isort = "6.0.0"
dotenv-linter = "0.4.0"

mypy = "1.2.0"

pre-commit = "3.2.2"

# Testing
pytest = "7.3.0"
httpx = "0.24.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = """
    ('
    |.idea/
    |.venv/
    |.vscode/
    ')
"""

